# VR-DAW

./: CMakeLists.txt  Info.plist  README.md  build_macos.sh
backend/: app.py  models.py  requirements.txt
cmake/: Findglad.cmake
docs/: UserGuide.md
resources/: Info.plist
src/: VRDAW.cpp  VRDAW.hpp  main.cpp
src/ai/: AIChatbot.cpp  AIChatbot.hpp  AIManager.cpp  AIManager.hpp  NeuralNetwork.hpp  TextProcessor.cpp  TextProcessor.hpp  VoiceSynthesizer.cpp  VoiceSynthesizer.hpp
src/audio/: AIMasteringProcessor.cpp  AIMasteringProcessor.hpp  AudioEditing.cpp  AudioEditing.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioEvent.hpp  AudioProcessing.cpp  AudioProcessing.hpp  AudioThread.hpp  AudioTrack.cpp  AudioTrack.hpp  Automation.cpp  Automation.hpp  CMakeLists.txt  CollaborationManager.cpp  CollaborationManager.hpp  DolbyAtmosManager.cpp  DolbyAtmosManager.hpp  DolbyAtmosProcessor.cpp  DolbyAtmosProcessor.hpp  DynamicsProcessor.cpp  DynamicsProcessor.hpp  Effects.cpp  Effects.hpp  EyeTracker.cpp  EyeTracker.hpp  GestureController.cpp  GestureController.hpp  HapticController.cpp  HapticController.hpp  Mixer.cpp  Mixer.hpp  PerformanceOptimizer.cpp  PerformanceOptimizer.hpp  PluginManager.cpp  PluginManager.hpp  SampleToMIDIConverter.cpp  SampleToMIDIConverter.hpp  SoundSampleBank.cpp  (+17 more)
src/backend/: AudioEngine.cpp  AudioEngine.hpp  CommunityManager.cpp  CommunityManager.hpp  PluginManager.cpp  PluginManager.hpp  ProjectManager.cpp  ProjectManager.hpp
src/collaboration/: CollaborationManager.cpp  CollaborationManager.hpp
src/community/: CommunityManager.cpp  CommunityManager.hpp
src/core/: CMakeLists.txt  PerformanceOptimizer.cpp  PerformanceOptimizer.hpp
src/midi/: MIDIEngine.cpp  MIDIEngine.hpp
src/network/: BackendServer.cpp  BackendServer.hpp  NetworkManager.cpp  NetworkManager.hpp  WebRTCManager.cpp  WebRTCManager.hpp
src/plugins/: CMakeLists.txt  PluginInterface.hpp  PluginManager.cpp
src/plugins/plugins/: ReverbPlugin.cpp  ReverbPlugin.hpp
src/ui/: CMakeLists.txt  CollaborationUI.cpp  CollaborationUI.hpp  MainMenu.cpp  MainMenu.hpp  TutorialSystem.cpp  VRControlPanel.cpp  VRControlPanel.hpp  VRUI.cpp  VRUI.hpp
src/utils/: CMakeLists.txt  Config.cpp  Config.hpp  Logger.cpp  Logger.hpp
src/video/: CMakeLists.txt
src/vr/: CMakeLists.txt  FontManager.cpp  FontManager.hpp  TextRenderer.cpp  TextRenderer.hpp  TextureManager.cpp  TextureManager.hpp  UIMeshGenerator.cpp  UIMeshGenerator.hpp  VRAudio.cpp  VRAudio.hpp  VRController.cpp  VRController.hpp  VRInput.cpp  VRInput.hpp  VRInterface.cpp  VRInterface.hpp  VRNetwork.cpp  VRNetwork.hpp  VRPhysics.cpp  VRPhysics.hpp  VRRenderer.cpp  VRRenderer.hpp  VRScene.cpp  VRScene.hpp  VRSystem.cpp  VRSystem.hpp  VRUI.cpp  VRUI.hpp
src/vr/shaders/: text.frag  text.vert  text_fragment.glsl  text_vertex.glsl  ui_fragment.glsl  ui_vertex.glsl
tests/: AIChatbotTests.cpp  AITests.cpp  AudioEngineTests.cpp  AudioProcessingTests.cpp  AutomationTests.cpp  ConfigurationTests.cpp  ErrorHandlingTests.cpp  ExportTests.cpp  ImportTests.cpp  IntegrationTests.cpp  MIDITests.cpp  NetworkTests.cpp  PerformanceTests.cpp  ProjectTests.cpp  SecurityTests.cpp  StressTests.cpp  UITests.cpp  UnitTests.cpp  VRControlPanelTests.cpp  VRInterfaceTests.cpp  VoiceSynthesizerTests.cpp
